--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,70 +2,83 @@ name: CI
 
 on:
   push:
-    branches: ["main", "master"]
+    branches: [main]
   pull_request:
+    branches: [main]
 
 jobs:
-  lint:
+  lint-type:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-
-      - name: Install uv
+      - name: Install deps
         run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
-
-      - name: Create virtual environment
-        run: uv venv
-
-      - name: Install dependencies
-        run: uv pip install -e '.[dev]'
-
-      - name: Run format check
-        run: uv run python -m ruff format --check src tests docs
-
-      - name: Run lint
-        run: uv run python -m ruff check src tests docs
-
-      - name: Run typecheck
-        run: uv run python -m mypy src
+          python -m pip install --upgrade pip
+          python -m pip install .[dev]
+      - name: Run pre-commit (ruff/black/mypy)
+        run: pre-commit run --all-files
 
   test:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        python-version: ["3.11", "3.12"]
+        python-version: ["3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: Install uv
+      - name: Install deps
         run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
-
-      - name: Create virtual environment
-        run: uv venv
-
-      - name: Install dependencies
-        run: uv pip install -e '.[dev]'
-
+          python -m pip install --upgrade pip
+          python -m pip install .[dev]
       - name: Run tests
-        run: uv run pytest --cov=reflexio --cov-report=xml
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v5
+        run: pytest --cov=reflexio --cov-report=xml --cov-report=term
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v4
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage.xml
-          fail_ci_if_error: true
+          name: coverage-${{ matrix.python-version }}
+          path: coverage.xml
+
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - name: Install docs deps
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install .[docs]
+      - name: Build docs
+        run: mkdocs build --strict
+      - name: Upload docs site
+        uses: actions/upload-artifact@v4
+        with:
+          name: site
+          path: site
+
+  bench:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install .[dev]
+      - name: Run pyperf benchmark
+        run: |
+          python docs/snippets/bench_retry.py > bench.txt
+      - name: Upload benchmark artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: benchmark
+          path: bench.txt
