--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install .[dev]
       - name: Run tests
-        run: pytest --cov=reflexio --cov-report=xml --cov-report=term
+        run: pytest --cov=redress --cov-report=xml --cov-report=term
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
