--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,3 +26,4 @@ jobs:
         uses: pypa/gh-action-pypi-publish@v1.13.0
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
+          skip-existing: true
