--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,4 +34,5 @@ nav:
   - Usage: usage.md
   - Examples: examples/index.md
   - API reference: api.md
+  - Roadmap: roadmap-public.md
   - Changelog: changelog.md
