--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,21 @@ docs = [
     "mkdocs>=1.6.0",
     "mkdocs-material>=9.5.0",
 ]
+aiohttp = [
+    "aiohttp>=3.9.0",
+]
+grpc = [
+    "grpcio>=1.60.0",
+]
+boto3 = [
+    "boto3>=1.34.0",
+]
+urllib3 = [
+    "urllib3>=2.0.0",
+]
+redis = [
+    "redis>=5.0.0",
+]
 
 [project.scripts]
 redress = "redress.cli:main"
