--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          python -m pip install .[dev]
+          python -m pip install .[dev,aiohttp,grpc,boto3,redis,urllib3]
       - name: Run pre-commit (ruff/black/mypy)
         run: pre-commit run --all-files
 
