--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,11 +28,17 @@ nav:
   - Getting started: getting-started.md
   - Concepts:
       - Error classes & classifiers: concepts/error-classes.md
+      - Classification: concepts/classification.md
       - Retry strategies: concepts/strategies.md
       - Policies & decorators: concepts/policies-decorators.md
+      - Circuit breakers: concepts/circuit-breakers.md
       - Observability: observability.md
       - Safety and resilience: safety-resilience.md
       - Design notes: design_notes.md
+  - Recipes:
+      - HTTP: recipes/http.md
+      - Databases: recipes/db.md
+      - Observability: recipes/observability.md
   - Usage: usage.md
   - Reference flows: reference-flows.md
   - Examples: examples/index.md
