--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ markdown_extensions:
 nav:
   - Overview: index.md
   - Why Redress: blog/why-redress.md
+  - Comparison: comparison.md
   - Getting started: getting-started.md
   - Concepts:
       - Error classes & classifiers: concepts/error-classes.md
